manifests-failed/artifact-hub-1.18.0.tgz-manifest.yaml
---
# Source: artifact-hub/charts/postgresql/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-postgresql-headless
  labels:
    app: postgresql
    chart: postgresql-8.2.1
    release: "my-release"
    heritage: "Helm"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app: postgresql
    release: "my-release"
---
# Source: artifact-hub/charts/postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-postgresql
  labels:
    app: postgresql
    chart: postgresql-8.2.1
    release: "my-release"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app: postgresql
    release: "my-release"
    role: master
---
# Source: artifact-hub/templates/hub_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
  labels:
    app.kubernetes.io/component: hub
    helm.sh/chart: artifact-hub-1.18.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.18.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: hub
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: my-release
---
# Source: artifact-hub/templates/trivy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trivy
  labels:
    app.kubernetes.io/component: trivy
    helm.sh/chart: artifact-hub-1.18.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.18.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: trivy
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: my-release
---
# Source: artifact-hub/templates/hub_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
  labels:
    app.kubernetes.io/component: hub
    helm.sh/chart: artifact-hub-1.18.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.18.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: hub
      app.kubernetes.io/name: artifact-hub
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8001"
      labels:
        app.kubernetes.io/component: hub
        app.kubernetes.io/name: artifact-hub
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: hub
      containers:
        - name: hub
          image: artifacthub/hub:v1.18.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: hub-config
              mountPath: "/home/hub/.cfg"
              readOnly: true
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
      volumes:
        - name: hub-config
          secret:
            secretName: hub-config
---
# Source: artifact-hub/templates/trivy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy
  labels:
    app.kubernetes.io/component: trivy
    helm.sh/chart: artifact-hub-1.18.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.18.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: trivy
      app.kubernetes.io/name: artifact-hub
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/component: trivy
        app.kubernetes.io/name: artifact-hub
        app.kubernetes.io/instance: my-release
    spec:
      containers:
        - name: trivy
          image: aquasec/trivy:0.43.1
          command: ['trivy', '--debug', '--cache-dir', '/trivy', 'server', '--listen', '0.0.0.0:8081']
          volumeMounts:
            - name: trivy
              mountPath: "/trivy"
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
      volumes:
        - name: trivy
          emptyDir: {}
---
# Source: artifact-hub/charts/postgresql/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-postgresql
  labels:
    app: postgresql
    chart: postgresql-8.2.1
    release: "my-release"
    heritage: "Helm"
spec:
  serviceName: my-release-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: postgresql
      release: "my-release"
      role: master
  template:
    metadata:
      name: my-release-postgresql
      labels:
        app: postgresql
        chart: postgresql-8.2.1
        release: "my-release"
        heritage: "Helm"
        role: master
    spec:      
      securityContext:
        fsGroup: 1001
      containers:
        - name: my-release-postgresql
          image: docker.io/artifacthub/postgres:latest
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -d "hub" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "postgres" -d "hub" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /data
              subPath: 
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: artifact-hub/templates/hub_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub
  labels:
    app.kubernetes.io/component: hub
    helm.sh/chart: artifact-hub-1.18.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.18.0"
    app.kubernetes.io/managed-by: Helm
spec:  
  defaultBackend:
    service:
      name: hub
      port:
        number: 80
